test/correct/TypeSyn1.hs
module TypeSyn1 where

import TypeSyn2 

x :: A Int Bool Char
x = (3, True, 'b')
