test/typeerrors/Examples/PatTuple.hs
module PatTuple where

f :: Bool -> Int
f (a,b) = 13
